--- a/demo/src/main/res/layout/item_detail.xml
+++ b/demo/src/main/res/layout/item_detail.xml
@@ -78,6 +78,10 @@
 
         </LinearLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="#afa5a5a5"/>
 
     </LinearLayout>
 
